[bdist_wheel]
universal = 0

[metadata]
name = python-openhab-eventbus
version = 1.0.0
description = An MQTT Event Bus for openHAB. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Dörflinger
author_email = michaeldoerflinger93@gmail.com
url = https://github.com/Michdo93/python-openhab-eventbus
license = MIT License
download_url = https://github.com/Michdo93/python-openhab-eventbus
project_urls =
    Bug Tracker = https://github.com/Michdo93/python-openhab-eventbus/issues
    Documentation = https://github.com/Michdo93/python-openhab-eventbus/blob/main/README.md
    Source Code = https://github.com/Michdo93/python-openhab-eventbus
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    openHAB

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires = >=3.5
install_requires =
    python-openhab-itemevents>=0.1.2
    python-openhab-crud>=0.1.2
    paho-mqtt>=1.6.1
